{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 288,
  "lineage": "77528f07-f0d7-db3c-f344-5a0f58b20c6d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:loadbalancer/app/coding-cloud-lb/cf47ee726838c82a",
            "arn_suffix": "app/coding-cloud-lb/cf47ee726838c82a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "coding-cloud-lb-328468849.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:loadbalancer/app/coding-cloud-lb/cf47ee726838c82a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "coding-cloud-lb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0a42c7710272b8475"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00661d3dc078f7ca2"
              },
              {
                "subnet_id": "subnet-0408565e3630ef4f9"
              }
            ],
            "subnets": [
              "subnet-00661d3dc078f7ca2",
              "subnet-0408565e3630ef4f9"
            ],
            "vpc_id": "vpc-0ed4328f47c53f7bd",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:loadbalancer/app/coding-cloud-lb/cf47ee726838c82a"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:listener/app/coding-cloud-lb/cf47ee726838c82a/84bec5bd7bcbfe64",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:targetgroup/coding-cloud-vm-target/1b87140cec9ce820",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:listener/app/coding-cloud-lb/cf47ee726838c82a/84bec5bd7bcbfe64",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:loadbalancer/app/coding-cloud-lb/cf47ee726838c82a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:listener/app/coding-cloud-lb/cf47ee726838c82a/84bec5bd7bcbfe64"
          },
          "dependencies": [
            "module.ec2.aws_alb.lb",
            "module.ec2.aws_alb_target_group.lb-target",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:targetgroup/coding-cloud-vm-target/1b87140cec9ce820",
            "arn_suffix": "targetgroup/coding-cloud-vm-target/1b87140cec9ce820",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:targetgroup/coding-cloud-vm-target/1b87140cec9ce820",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:079858837546:loadbalancer/app/coding-cloud-lb/cf47ee726838c82a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "coding-cloud-vm-target",
            "port": 31000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:targetgroup/coding-cloud-vm-target/1b87140cec9ce820"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "vm-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:targetgroup/coding-cloud-vm-target/1b87140cec9ce820-2025120404440183170000000f",
            "port": 31000,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:079858837546:targetgroup/coding-cloud-vm-target/1b87140cec9ce820",
            "target_id": "i-062519dc9b4401e3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_alb_target_group.lb-target",
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_instance.worker",
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:079858837546:instance/i-0511ef7ad79de0670",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0511ef7ad79de0670",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-051910bfcd5099a25"
              }
            ],
            "primary_network_interface_id": "eni-051910bfcd5099a25",
            "private_dns": "ip-10-0-67-118.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.67.118",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08bb3927b3b60803d",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfef8b870afe3228",
            "tags": {
              "Name": "Docker"
            },
            "tags_all": {
              "Name": "Docker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af88f267fab474a3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "i-0511ef7ad79de0670",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:079858837546:instance/i-00728765980be60b4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00728765980be60b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-083b94f07c1aae427"
              }
            ],
            "primary_network_interface_id": "eni-083b94f07c1aae427",
            "private_dns": "ip-10-0-16-134.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.16.134",
            "public_dns": "ec2-13-127-243-89.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.243.89",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ff782d0b9983e91c",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0408565e3630ef4f9",
            "tags": {
              "Name": "Jenkins"
            },
            "tags_all": {
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00368fbc0b57cfa99"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "i-00728765980be60b4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00cafcbeaa5aaba5a",
            "arn": "arn:aws:ec2:ap-south-1:079858837546:instance/i-0b55c612a712ec214",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cluster-instance-profile",
            "id": "i-0b55c612a712ec214",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02ebfad2d02b89162"
              }
            ],
            "primary_network_interface_id": "eni-02ebfad2d02b89162",
            "private_dns": "ip-10-0-77-101.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.77.101",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cbbf1600662c49c7",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfef8b870afe3228",
            "tags": {
              "Name": "K8s-Master"
            },
            "tags_all": {
              "Name": "K8s-Master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e813d40161d54582"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "i-0b55c612a712ec214",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00cafcbeaa5aaba5a",
            "arn": "arn:aws:ec2:ap-south-1:079858837546:instance/i-062519dc9b4401e3d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cluster-instance-profile",
            "id": "i-062519dc9b4401e3d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02876d05203ab7122"
              }
            ],
            "primary_network_interface_id": "eni-02876d05203ab7122",
            "private_dns": "ip-10-0-96-54.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.96.54",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07207f86e5b6b6eb1",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2a8618c0e660bed",
            "tags": {
              "Name": "K8s-Worker"
            },
            "tags_all": {
              "Name": "K8s-Worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0073885f9d2b7d40d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "i-062519dc9b4401e3d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b9a09b94194ff74",
            "arn": "arn:aws:ec2:ap-south-1:079858837546:elastic-ip/eipalloc-08b9a09b94194ff74",
            "association_id": "eipassoc-03ae14e3e8224caaa",
            "domain": "vpc",
            "id": "eipalloc-08b9a09b94194ff74",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09609b9cd79e5261d",
            "private_dns": "ip-10-0-19-44.ap-south-1.compute.internal",
            "private_ip": "10.0.19.44",
            "public_dns": "ec2-3-7-150-212.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.150.212",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "NAT-EIP"
            },
            "tags_all": {
              "Name": "NAT-EIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:internet-gateway/igw-03a04917a9a828cd9",
            "id": "igw-03a04917a9a828cd9",
            "owner_id": "079858837546",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-IGW"
            },
            "tags_all": {
              "Name": "Coding-Cloud-IGW"
            },
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terra-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b9a09b94194ff74",
            "association_id": "eipassoc-03ae14e3e8224caaa",
            "connectivity_type": "public",
            "id": "nat-080893792966b0bf0",
            "network_interface_id": "eni-09609b9cd79e5261d",
            "private_ip": "10.0.19.44",
            "public_ip": "3.7.150.212",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0408565e3630ef4f9",
            "tags": {
              "Name": "Coding-Cloud-NAT"
            },
            "tags_all": {
              "Name": "Coding-Cloud-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "terra-priv-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f071276fff7ccb431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-080893792966b0bf0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f071276fff7ccb43",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0f071276fff7ccb43"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "terra-pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03a04917a9a828cd9",
            "id": "r-rtb-09ae7ed939961f38d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-09ae7ed939961f38d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-09ae7ed939961f38d"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:route-table/rtb-0f071276fff7ccb43",
            "id": "rtb-0f071276fff7ccb43",
            "owner_id": "079858837546",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-080893792966b0bf0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Coding-Cloud-Private-Table"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Private-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "rtb-0f071276fff7ccb43",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:route-table/rtb-09ae7ed939961f38d",
            "id": "rtb-09ae7ed939961f38d",
            "owner_id": "079858837546",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a04917a9a828cd9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Coding-Cloud-Public-Table"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Public-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "rtb-09ae7ed939961f38d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-priva-asso-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0247bcc8a181d9d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f071276fff7ccb43",
            "subnet_id": "subnet-0bfef8b870afe3228"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-priva-asso-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0131e42e604397f0d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f071276fff7ccb43",
            "subnet_id": "subnet-0d2a8618c0e660bed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-pub-asso-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013be44abcea30ac9",
            "region": "ap-south-1",
            "route_table_id": "rtb-09ae7ed939961f38d",
            "subnet_id": "subnet-0408565e3630ef4f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-pub-asso-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dfb1df6905681f5",
            "region": "ap-south-1",
            "route_table_id": "rtb-09ae7ed939961f38d",
            "subnet_id": "subnet-00661d3dc078f7ca2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group/sg-0a42c7710272b8475",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a42c7710272b8475",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251204044153582700000004",
            "name_prefix": "terraform-",
            "owner_id": "079858837546",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sg-0a42c7710272b8475",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group/sg-0af88f267fab474a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af88f267fab474a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20251204044153987500000008",
            "name_prefix": "terraform-",
            "owner_id": "079858837546",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Docker-SG"
            },
            "tags_all": {
              "Name": "Docker-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sg-0af88f267fab474a3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group/sg-00368fbc0b57cfa99",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00368fbc0b57cfa99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20251204044153577100000001",
            "name_prefix": "terraform-",
            "owner_id": "079858837546",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins-Master-SG"
            },
            "tags_all": {
              "Name": "Jenkins-Master-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sg-00368fbc0b57cfa99",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-k8s-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group/sg-0e813d40161d54582",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e813d40161d54582",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 179,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 179
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "terraform-20251204044153594500000007",
            "name_prefix": "terraform-",
            "owner_id": "079858837546",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K8s-Master-SG"
            },
            "tags_all": {
              "Name": "K8s-Master-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sg-0e813d40161d54582",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-k8s-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group/sg-0073885f9d2b7d40d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0073885f9d2b7d40d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 179,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 179
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 31000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31000
              }
            ],
            "name": "terraform-20251204044153584200000005",
            "name_prefix": "terraform-",
            "owner_id": "079858837546",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K8s-Worker-SG"
            },
            "tags_all": {
              "Name": "K8s-Worker-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sg-0073885f9d2b7d40d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group/sg-06b38035215c921ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b38035215c921ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20251204044153587600000006",
            "name_prefix": "terraform-",
            "owner_id": "079858837546",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG"
            },
            "tags_all": {
              "Name": "RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sg-06b38035215c921ba",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:subnet/subnet-0408565e3630ef4f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0408565e3630ef4f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079858837546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Public-Subnet-1"
            },
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "subnet-0408565e3630ef4f9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:subnet/subnet-00661d3dc078f7ca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00661d3dc078f7ca2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079858837546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Public-Subnet-2"
            },
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "subnet-00661d3dc078f7ca2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-sub-priva-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:subnet/subnet-0bfef8b870afe3228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfef8b870afe3228",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079858837546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Private-Subnet-1"
            },
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "subnet-0bfef8b870afe3228",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-sub-priva-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:subnet/subnet-0d2a8618c0e660bed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2a8618c0e660bed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079858837546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Private-Subnet-2"
            },
            "vpc_id": "vpc-0ed4328f47c53f7bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "subnet-0d2a8618c0e660bed",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:vpc/vpc-0ed4328f47c53f7bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015d1da3b3d65a7fd",
            "default_route_table_id": "rtb-0f305cfce3b32f28f",
            "default_security_group_id": "sg-0cecad5c15a150abd",
            "dhcp_options_id": "dopt-002871e397b4bcb79",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed4328f47c53f7bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f305cfce3b32f28f",
            "owner_id": "079858837546",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-VPC"
            },
            "tags_all": {
              "Name": "Coding-Cloud-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "vpc-0ed4328f47c53f7bd",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-alb-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0ed5c05f845e98c3b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ed5c05f845e98c3b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0a42c7710272b8475",
            "security_group_rule_id": "sgr-0ed5c05f845e98c3b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0ed5c05f845e98c3b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-docker-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0238a326f10662b94",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0238a326f10662b94",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0af88f267fab474a3",
            "security_group_rule_id": "sgr-0238a326f10662b94",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0238a326f10662b94",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-jenkins-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-04987a2b80d5c3d52",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04987a2b80d5c3d52",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-00368fbc0b57cfa99",
            "security_group_rule_id": "sgr-04987a2b80d5c3d52",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-04987a2b80d5c3d52",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-master-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0b2bda17f6ffbd045",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b2bda17f6ffbd045",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e813d40161d54582",
            "security_group_rule_id": "sgr-0b2bda17f6ffbd045",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0b2bda17f6ffbd045",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-rds-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0498623a5cd0a0e8a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0498623a5cd0a0e8a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06b38035215c921ba",
            "security_group_rule_id": "sgr-0498623a5cd0a0e8a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0498623a5cd0a0e8a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-worker-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-030d7df0de10eb172",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-030d7df0de10eb172",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0073885f9d2b7d40d",
            "security_group_rule_id": "sgr-030d7df0de10eb172",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-030d7df0de10eb172",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-alb-ingress-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-02e73fea0e696c6cb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02e73fea0e696c6cb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0a42c7710272b8475",
            "security_group_rule_id": "sgr-02e73fea0e696c6cb",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-02e73fea0e696c6cb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-docker-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0109a1db6d8d99d6c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0109a1db6d8d99d6c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0af88f267fab474a3",
            "security_group_rule_id": "sgr-0109a1db6d8d99d6c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0109a1db6d8d99d6c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-jenkins-ingress-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-095a785be72adff70",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-095a785be72adff70",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-00368fbc0b57cfa99",
            "security_group_rule_id": "sgr-095a785be72adff70",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-095a785be72adff70",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-jenkins-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0509319ea4ae6db14",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0509319ea4ae6db14",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-00368fbc0b57cfa99",
            "security_group_rule_id": "sgr-0509319ea4ae6db14",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0509319ea4ae6db14",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-179",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0cae6482a9bb013a7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 179,
            "id": "sgr-0cae6482a9bb013a7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e813d40161d54582",
            "security_group_rule_id": "sgr-0cae6482a9bb013a7",
            "tags": null,
            "tags_all": {},
            "to_port": 179
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0cae6482a9bb013a7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-6443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-07a9f8de90f49b828",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-07a9f8de90f49b828",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e813d40161d54582",
            "security_group_rule_id": "sgr-07a9f8de90f49b828",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-07a9f8de90f49b828",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-all-from-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0c2087cead6438472",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c2087cead6438472",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0073885f9d2b7d40d",
            "region": "ap-south-1",
            "security_group_id": "sg-0e813d40161d54582",
            "security_group_rule_id": "sgr-0c2087cead6438472",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0c2087cead6438472",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0971359411ba46e4a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0971359411ba46e4a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e813d40161d54582",
            "security_group_rule_id": "sgr-0971359411ba46e4a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0971359411ba46e4a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-rds-ingress-3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0f40db6f56b01fc73",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0f40db6f56b01fc73",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06b38035215c921ba",
            "security_group_rule_id": "sgr-0f40db6f56b01fc73",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0f40db6f56b01fc73",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-10250",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-08b50cc026a4d0f89",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10250,
            "id": "sgr-08b50cc026a4d0f89",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0073885f9d2b7d40d",
            "security_group_rule_id": "sgr-08b50cc026a4d0f89",
            "tags": null,
            "tags_all": {},
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-08b50cc026a4d0f89",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-179",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-012fe0abcc70e767b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 179,
            "id": "sgr-012fe0abcc70e767b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0073885f9d2b7d40d",
            "security_group_rule_id": "sgr-012fe0abcc70e767b",
            "tags": null,
            "tags_all": {},
            "to_port": 179
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-012fe0abcc70e767b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-31000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-09d98b5e3b1d9ce95",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 31000,
            "id": "sgr-09d98b5e3b1d9ce95",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0073885f9d2b7d40d",
            "security_group_rule_id": "sgr-09d98b5e3b1d9ce95",
            "tags": null,
            "tags_all": {},
            "to_port": 31000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-09d98b5e3b1d9ce95",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-all-from-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-0041efa729854a450",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0041efa729854a450",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e813d40161d54582",
            "region": "ap-south-1",
            "security_group_id": "sg-0073885f9d2b7d40d",
            "security_group_rule_id": "sgr-0041efa729854a450",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-0041efa729854a450",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:079858837546:security-group-rule/sgr-01c0a64093d34c362",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01c0a64093d34c362",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0073885f9d2b7d40d",
            "security_group_rule_id": "sgr-01c0a64093d34c362",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079858837546",
            "id": "sgr-01c0a64093d34c362",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    }
  ]
}